--- a/nginx/conf.d/drupal.conf
+++ b/nginx/conf.d/drupal.conf
@@ -14,5 +14,11 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_pass cms-php:9000;
     }
+
+    # Метрики stub_status для nginx exporter
+    location /stub_status {
+        stub_status;
+        access_log off;
+        allow all; # в учебных целях, в бою лучше ограничить сетью
+    }
 }
-    
