--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -62,3 +62,14 @@ scrape_configs:
   - job_name: 'windows-host'
     static_configs:
       - targets: ['host.docker.internal:9182']
+
+  - job_name: 'victoriametrics'
+    static_configs:
+      - targets: ['victoriametrics:8428']
+
+# remote_write в VictoriaMetrics + лейбл site=prod
+remote_write:
+  - url: http://victoriametrics:8428/api/v1/write
+    write_relabel_configs:
+      - target_label: site
+        replacement: "prod"
